fixing menu remembering state

--- a/views/layouts/css/style.css
+++ b/views/layouts/css/style.css
@@ -550,7 +550,7 @@ h2 {
 }
 
 .header .nav-item{
-    
+    list-style:none;
 }
 /**********************************/
 /********* Breadcrumb CSS *********/
