--- a/views/layouts/css/style.css
+++ b/views/layouts/css/style.css
@@ -1050,7 +1050,7 @@ h2 {
 .product-detail {
     position: relative;
     width: 100%;
-    padding: 30px 0;
+    /*padding: 30px 0;*/
 }
 
 .product-detail .product-detail-top,
